# webserver-py

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deployment.yml
app/: api.py  authentication.py  config.py  database.py  dependencies.py  main.py  permissions.py
app/database/: pg.py  queries.py
app/models/: __init__.py  agendaitem.py  agendaitemtype.py  announcement.py  article.py  authentication.py  comment.py  commissions.py  documents.py  event.py  page.py  photo.py  result.py  subscription.py  user.py
app/models/email/: alias.py  alias_mailinglist.py  mailinglist.py  mailinglist_membership.py
app/queries/: activities.py  announcements.py  articles.py  commissions.py  documents.py  events.py  pages.py  photos.py  results.py  users.py
app/routers/: activities.py  announcements.py  articles.py  authentication.py  commissions.py  documents.py  events.py  eventtypes.py  pages.py  photos.py  results.py  user_types.py  users.py
app/schemas/: __init__.py  activities.py  agendaitem_types.py  agendaitems.py  announcements.py  comments.py  commission_memberships.py  commissions.py  documents.py  events.py  eventtypes.py  mail.py  newsitems.py  pages.py  photos.py  results.py  subscriptions.py  user_types.py  users.py
tasks/: migrate_newsitems.py  migrate_passwords.py  migrate_photos.py
templates/: activities.html  base.html  layout.html  news.html  react.html
